...
      return;
    }
    descripcion = _descripcionController.text;
    final containsLetter = RegExp(r'[a-zA-Z]').hasMatch(descripcion);
    if (descripcion.length < 10 && descripcion.length != 0) {
      if(context.mounted){showSnackbar(context,
          "Descripción debe contener mínimo 10 caracteres si no es vacia", red);}
      return;
    }

    if (descripcion.length > 300) {
     if(context.mounted){ showSnackbar(
          context, "No puede exceder la descripción los 300 caracteres", red);}
...
    if (!containsLetter && descripcion.isNotEmpty) {
      if(context.mounted){showSnackbar(context, "Descripción debe contener letras", red);}
      return;
    }
    if (descripcion.trim() == category) {
      if(context.mounted){showSnackbar(context,
          "La descripción no puede ser igual al nombre de la categoría", red);}
      return;
    }
    if (descripcion.trim() == name) {
      if(context.mounted){showSnackbar(context,
          "La descripción no puede ser igual al nombre del artículo", red);}
      return;
    }
    if(context.mounted){editarDescripcion(context, widget.firebaseURL, _descripcionController.text);}
    setState(() {
      isEditing = false;
    });
...
                    height: 25,
                  ),
                  Center(
                    child: Column(
                      children: [
                        GestureDetector(
                          key: const Key('Image'),
                          onTap: () {
                            setState(() {
                              agregar();
                            });
                          },
                          child: Stack(
...
                              padding: const EdgeInsets.all(10),
                              child: Row(
                                children: [
                                  Expanded(
                                    child: isEditing
                                        ? TextFormField(
                                            key: const Key('Descripcion'),
                                            keyboardType:
                                                TextInputType.multiline,
                                            maxLines: null,
                                            maxLength: 300,
                                            controller: _descripcionController,
                                            style: TextStyle(
...
                                            textAlign: TextAlign.center,
                                          ),
                                  ),
                                  Column(
                                    children: [
                                      IconButton(
                                        key: const Key('edit'),
                                        icon: Icon(
                                          isEditing ? Icons.check : Icons.edit,
                                          color: Colors.green,
                                        ),
                                        onPressed: () {
                                          if (isEditing) {
...
